--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalender</title>
+    <link rel="stylesheet" href="style kalender"/>
 </head>
 <body>
-    <h1 style="background-color: rgb(231, 238, 161);">Kalender von 10.02.2026</h1>
+    <h1>Kalender von 10.02.2026</h1>
     <p>10. Februar ist ein Dienstag und zwar der erste dienstag im Monat Februar des Jahres 2025.</p>
 
     <table border="1">
@@ -26,7 +27,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td style="background-color: rgb(223, 205, 255);">1</td>
+            <td>1</td>
         </tr>
         <tr>
             <td>2</td>
@@ -35,7 +36,7 @@
             <td>5</td>
             <td>6</td>
             <td>7</td>
-            <td style="background-color: rgb(223, 205, 255);">8</td>
+            <td>8</td>
         </tr>
         <tr>
             <td>9</td>
@@ -44,7 +45,7 @@
             <td>12</td>
             <td>13</td>
             <td>14</td>
-            <td style="background-color: rgb(223, 205, 255);">15</td>
+            <td>15</td>
         </tr>
         <tr>
             <td>16</td>
@@ -53,7 +54,7 @@
             <td>19</td>
             <td>20</td>
             <td>21</td>
-            <td style="background-color: rgb(223, 205, 255);">22</td>
+            <td>22</td>
         </tr>
         <tr>
             <td>23</td>
@@ -67,7 +68,7 @@
 
     <h2><u>Historische Ereignisse am 10. Februar</u></h2>
     
-    <div style="background-color: rgb(204, 241, 157);">
+    <div>
         <ul>
             <li>
                 <strong>2024:</strong> Bei einem russischen Drohnenangriff auf die ukrainische Stadt Charkiw sterben 
