--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalender</title>
-    <link rel="stylesheet" href="style kalender"/>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <h1>Kalender von 10.02.2026</h1>
     <p>10. Februar ist ein Dienstag und zwar der erste dienstag im Monat Februar des Jahres 2025.</p>
 
-    <table border="1">
+    <table class="kalender"
         <tr>
             <th>Mo</th>
             <th>Di</th>
             <th>MI</th>
             <th>Do</th>
             <th>Fr</th>
-            <th>Sa</th>
-            <th>So</th>
+            <th class="Samstag">Sa</th>
+            <th class="Sontag">So</th>
         </tr>
         <tr>
             <td></td>
@@ -26,8 +26,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
-            <td>1</td>
+          <td class="Samstag"></td>
+            <td class="WE Sontag">1</td>
         </tr>
         <tr>
             <td>2</td>
@@ -35,8 +35,8 @@
             <td>4</td>
             <td>5</td>
             <td>6</td>
-            <td>7</td>
-            <td>8</td>
+            <td class="Samstag">7</td>
+            <td class="WE Sontag">8</td>
         </tr>
         <tr>
             <td>9</td>
@@ -44,8 +44,8 @@
             <td>11</td>
             <td>12</td>
             <td>13</td>
-            <td>14</td>
-            <td>15</td>
+            <td class="WE Samstag">14</td>
+            <td class="WE Sontag">15</td>
         </tr>
         <tr>
             <td>16</td>
@@ -53,22 +53,23 @@
             <td>18</td>
             <td>19</td>
             <td>20</td>
-            <td>21</td>
-            <td>22</td>
+          <td class="WE Samstag">21</td>
+            <td class="WE Sontag">22</td>
         </tr>
         <tr>
             <td>23</td>
             <td>24</td>
             <td>25</td>
             <td>26</td>
-            <td>27</td>
-            <td>28</td>
+          <td class="WE Samstag">27</td>
+            <td class="WE Sontag">28</td>
+            <td></td>
         </tr>
     </table>
 
     <h2><u>Historische Ereignisse am 10. Februar</u></h2>
     
-    <div>
+    <div class="contenedor">
         <ul>
             <li>
                 <strong>2024:</strong> Bei einem russischen Drohnenangriff auf die ukrainische Stadt Charkiw sterben 
