--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td></td>
             <td></td>
             <td></td>
-          <td class="Samstag"></td>
+            <td class="WE Samstag"></td>
             <td class="WE Sontag">1</td>
         </tr>
         <tr>
@@ -35,7 +35,7 @@
             <td>4</td>
             <td>5</td>
             <td>6</td>
-            <td class="Samstag">7</td>
+            <td class="WE Samstag">7</td>
             <td class="WE Sontag">8</td>
         </tr>
         <tr>
