--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
                     <tr>
                         <th colspan="7">
                             <div class="Monat">
-                                <div><</div>
+                                <div>
+                                    <button><</button>
+                                </div>
                                 <div>Februar</div>
-                                <div>></div>
+                                <div>
+                                    <button>></button>
+                                </div>
                             </div>
                         </th>
                     </tr>
@@ -70,7 +74,7 @@
                         <td>17</td>
                         <td>18</td>
                         <td>19</td>
-                        <td>20</td>
+                        <td class="today">20</td>
                         <td class="WE_Samstag">21</td>
                         <td class="WE_Sonntag">22</td>
                     </tr>
